// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package logdog;

import "google/protobuf/timestamp.proto";

// LogStreamState is the log stream state value communicated to services.
message LogStreamState {
  // Path is the log stream's path.
  string path = 1;
  // The log stream's secret.
  //
  // Note that the secret is returned! This is okay, since this endpoint is only
  // accessible to trusted services. The secret can be cached by services to
  // validate stream information without needing to ping the Coordinator in
  // between each update.
  bytes secret = 2;

	// ProtoVersion is the protobuf version for this stream.
	string proto_version = 3;

	// The stream index of the log stream's terminal message. If the value is -1,
  // the log is still streaming.
	int64 terminal_index = 4;

	// If the log stream has been archived.
	bool archived = 5;
	// If the log stream has been purged.
	bool purged = 6;
}
